# my-robinhood-agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/design/: 01-domain-state.md  02-storage.md  03-data-ingestion.md  04-agent-workflows.md  04-langgraph-orchestration.md  05-llm-analysis.md  06-paper-ledger-performance.md  07-chat-router.md  08-robinhood-gate.md  README.md
scripts/: live_smoke.sh  transcript_smoke.sh
src/robinhood_agent/: __init__.py  cli.py  config.py  fixtures.py
src/robinhood_agent/agent/: __init__.py  event_update.py  full_research.py  history.py  paper_ledger.py  performance.py  quick_status.py  robinhood_gate.py  router.py
src/robinhood_agent/analysis/: __init__.py  fake.py  impact.py  llm.py
src/robinhood_agent/domain/: __init__.py  models.py
src/robinhood_agent/providers/: __init__.py  base.py  composite.py  csv_provider.py  fake.py  fmp.py  http.py  json_provider.py  polygon.py  sec_edgar.py
src/robinhood_agent/storage/: __init__.py  repositories.py  sqlite.py
tests/: test_composite_provider.py  test_config.py  test_csv_provider.py  test_domain_models.py  test_event_update.py  test_fmp_provider.py  test_full_research.py  test_history.py  test_json_provider.py  test_llm_analysis.py  test_paper_ledger.py  test_performance.py  test_polygon_provider.py  test_robinhood_gate.py  test_router.py  test_sec_edgar_provider.py  test_storage_and_quick_status.py
tests/fixtures/: news.json  prices.csv
