[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "my-robinhood-agent"
version = "0.1.0"
description = "Single-ticker research agent with local thesis state and paper ledger."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
robinhood-agent = "robinhood_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
